# rs-borsh

./: .travis.yml  Cargo.toml  README.md  ru.mo
.rpm/: rs-borsh.spec
doc/man/: borsh.1
i18n/: ru.po
src/: main.rs  runner.rs  settings.rs  user.rs
src/storage/: mod.rs  sqlite.rs  storage_type.rs
src/ui/: cli.rs  dialog.rs  mod.rs  ui_type.rs
src/verificator/: email.rs  method.rs  mod.rs
